////////////////////////////////////////////////////////////////////////////////////////////////////
///
/// @file      CustomProductControllerStateAccessoryPairing.h
///
/// @brief     This source code file contains functionality to process events that occur during the
///            product accessory pairing state.
///
/// @attention Copyright (C) 2018 Bose Corporation All Rights Reserved
///
////////////////////////////////////////////////////////////////////////////////////////////////////

////////////////////////////////////////////////////////////////////////////////////////////////////
///
///            Included Header Files
///
////////////////////////////////////////////////////////////////////////////////////////////////////
#pragma once
#include "ProductControllerState.h"
#include "HsmState.h"
#include "LpmServiceMessages.pb.h"

////////////////////////////////////////////////////////////////////////////////////////////////////
///                            Start of Product Application Namespace                            ///
////////////////////////////////////////////////////////////////////////////////////////////////////
namespace ProductApp
{

////////////////////////////////////////////////////////////////////////////////////////////////////
///
///            Forward Class Declarations
///
////////////////////////////////////////////////////////////////////////////////////////////////////
class ProductControllerHsm;

////////////////////////////////////////////////////////////////////////////////////////////////////
///
/// @class CustomProductControllerStateAccessoryPairing
///
/// @brief This class is used for executing accessory pairing.
///
////////////////////////////////////////////////////////////////////////////////////////////////////
class CustomProductControllerStateAccessoryPairing : public ProductControllerState
{
public:

    CustomProductControllerStateAccessoryPairing(
        ProductControllerHsm&       hsm,
        CHsmState*                  pSuperState,
        Hsm::STATE                  stateId,
        const std::string&          name = "AccessoryPairing" );

    ~CustomProductControllerStateAccessoryPairing( ) override
    {

    }

    void HandleStateStart( ) override;
    void HandleStateExit( )  override;
    bool HandleIntentSpeakerPairing( KeyHandlerUtil::ActionType_t intent )      override;
    bool HandleIntentPowerToggle( )                                             override;
    bool HandleIntentPowerOff( )                                                override;
    bool HandlePairingStatus( ProductPb::AccessorySpeakerState pairingStatus )  override;
    bool HandleNowSelectionInfo( const CAPSAPI::NowSelectionInfo& nowSelectionInfo )  override;

private:

};

////////////////////////////////////////////////////////////////////////////////////////////////////
///                             End of Product Application Namespace                             ///
////////////////////////////////////////////////////////////////////////////////////////////////////
}

////////////////////////////////////////////////////////////////////////////////////////////////////
///                                        End of File                                           ///
////////////////////////////////////////////////////////////////////////////////////////////////////
