////////////////////////////////////////////////////////////////////////////////////////////////////
///
/// @file      CustomProductControllerStateAccessoryPairingCancelling.h
///
/// @brief     This source code file contains functionality to process events that occur when
///            cancelling the product accessory pairing state leading to a power down to the
///            playable state.
///
/// @attention Copyright (C) 2018 Bose Corporation All Rights Reserved
///
////////////////////////////////////////////////////////////////////////////////////////////////////

////////////////////////////////////////////////////////////////////////////////////////////////////
///
///            Included Header Files
///
////////////////////////////////////////////////////////////////////////////////////////////////////
#pragma once
#include "ProductControllerState.h"
#include "HsmState.h"
#include "LpmServiceMessages.pb.h"
#include "APTimer.h"

////////////////////////////////////////////////////////////////////////////////////////////////////
///                            Start of Product Application Namespace                            ///
////////////////////////////////////////////////////////////////////////////////////////////////////
namespace ProductApp
{

////////////////////////////////////////////////////////////////////////////////////////////////////
///
///            Forward Class Declarations
///
////////////////////////////////////////////////////////////////////////////////////////////////////
class ProductControllerHsm;

////////////////////////////////////////////////////////////////////////////////////////////////////
///
/// @class CustomProductControllerStateAccessoryPairingCancelling
///
/// @brief This class is used when exiting accessory pairing.
///
////////////////////////////////////////////////////////////////////////////////////////////////////
class CustomProductControllerStateAccessoryPairingCancelling : public ProductControllerState
{
public:

    CustomProductControllerStateAccessoryPairingCancelling(
        ProductControllerHsm&       hsm,
        CHsmState*                  pSuperState,
        Hsm::STATE                  stateId,
        const std::string&          name = "AccessoryPairing" );

    ~CustomProductControllerStateAccessoryPairingCancelling( ) override
    {

    }

    void HandleStateStart( ) override;
    bool HandlePairingStatus( ProductPb::AccessorySpeakerState pairingStatus )  override;
    bool HandleIntentVolumeControl( KeyHandlerUtil::ActionType_t intent )       override;
    bool HandleIntentMuteControl( KeyHandlerUtil::ActionType_t intent )         override;
    bool HandleIntentPowerToggle( )                                             override;
};

////////////////////////////////////////////////////////////////////////////////////////////////////
///                             End of Product Application Namespace                             ///
////////////////////////////////////////////////////////////////////////////////////////////////////
}

////////////////////////////////////////////////////////////////////////////////////////////////////
///                                        End of File                                           ///
////////////////////////////////////////////////////////////////////////////////////////////////////
